<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_orders"
        android:title="@string/txt_home_client_Home"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/item_category"
        android:icon="@drawable/ic_category"
        android:title="@string/txt_home_restaurant_category"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/item_products"
        android:icon="@drawable/ic_pizza"
        android:title="@string/txt_home_restaurant_products"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/txt_home_client_profile"
        tools:ignore="HardcodedText" />
</menu>