<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_Item_Order_Product_Detail_Restaurant"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_name_product_shopping"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/img_Item_Order_Product_Detail_Restaurant"
            app:layout_constraintTop_toTopOf="@+id/img_Item_Order_Product_Detail_Restaurant" />

        <TextView
            android:id="@+id/txt_Item_Name_Product_Detail_Order_Restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/txt_default_name_general"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_Item_Order_Product_Detail_Restaurant"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/txt_quantity_product_detail"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_Item_Order_Product_Detail_Restaurant"
            app:layout_constraintTop_toBottomOf="@+id/txt_Item_Name_Product_Detail_Order_Restaurant" />

        <TextView
            android:id="@+id/txt_Item_Order_Quantity_Product_Detail_Restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/txt_quantity_general"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@id/textView14" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>