<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.client.ui.views.client.ClientProductsDetailActivity">

    <View
        android:id="@+id/viewTop"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@drawable/ic_delivery"
        android:rotationX="180"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/img_Slider_Product"
        android:layout_width="wrap_content"
        android:elevation="1dp"
        android:layout_marginTop="80dp"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_period="4000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_Name_Product_Detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_product_name_default_detail"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Slider_Product" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/txt_product_description_product_detail"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Name_Product_Detail" />

    <TextView
        android:id="@+id/txt_Description_Product_Detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="255"
        android:text="@string/txt_product_description_de"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_Add_Product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/img_Add_Product_detail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add" />

        <TextView
            android:id="@+id/txt_Counter_Product_Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/txt_product_count_product_detail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_Remove_Product_detail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_remove" />

        <TextView
            android:id="@+id/txt_Price_Product_Detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_product_price_detail"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Add_Product"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_login"
        android:text="@string/btn_add_product_detail"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:theme="@style/AppTheme.login"
        app:backgroundTint="@color/primary_blue"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>