<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.client.ui.views.payments.mercado_pago.view.ClientPaymentsInstallmentsActivity">

    <include
        android:id="@+id/include5"
        layout="@layout/action_bar" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="65dp"
        android:background="@drawable/shape_border_card"
        android:layout_marginRight="20sp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/txt_many_installments"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/Spinner_Installment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_Confirm_Pay_Installments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_total_pay"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_Installments_Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_product_default_price"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_Installments_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20sp"
            android:text="@string/txt_quantity_general"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Confirm_Pay_Installments"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_btn_login"
        android:text="@string/btn_confirm_pay_installments"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:theme="@style/AppTheme.login"
        app:backgroundTint="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar_spin_kit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

</androidx.constraintlayout.widget.ConstraintLayout>